cmake_minimum_required(VERSION 3.0.0)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_LIST_DIR}/cmake/")
project(flat-test VERSION 0.1.0)
include(CTest)
enable_testing()
find_package(flatbuffers REQUIRED)
FILE(GLOB FB_SCHEMA *.fbs)
FILE(GLOB CPP_FLES *.cpp)
# set(FB_SCHEMA
#   "${CMAKE_CURRENT_SOURCE_DIR}/SmallClass.fbs")
build_flatbuffers("${FB_SCHEMA}" "" fbschemas "" "${CMAKE_CURRENT_SOURCE_DIR}/generated" "" "")
add_library(FlatbuffersTarget INTERFACE)
target_include_directories(FlatbuffersTarget INTERFACE ${FLATBUFFERS_INCLUDE_DIR})
add_dependencies(FlatbuffersTarget fbschemas)
add_executable(flat-test ${CPP_FLES})
target_link_libraries(flat-test FlatbuffersTarget)
set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
